--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bmnav: ^0.3.4
+  line_icons: ^2.0.1
+  parse_server_sdk_flutter: ^2.1.0
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
+  get_it: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.2
+  mobx_codegen: ^1.1.2
+  build_resolvers: ^1.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,6 +57,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
