--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
   get_it: ^6.0.0
+  intl: ^0.17.0
+  brasil_fields: ^1.1.1
 
 dev_dependencies:
   flutter_test:
